# bandcamp-dl

./: .gitignore  LICENSE  README.md  bandcamp-dl.sublime-project  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  main.yml
src/bandcamp_dl/: __init__.py  bandcamp_dl.py  cli.py
